# -*- coding: utf-8 -*-
[metadata]
name = arcadeML
version = attr: arcademl.__version__
author = Pablo González Carrizo (@unmonoqueteclea)
author_email = pgonalezcarrizo@gmail.com

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.9, <4
install_requires =
   pygame>=2.1.2,<3
   bigml>=7.0.1,<8

[options.packages.find]
where=src

[options.extras_require]
dev =
    python-lsp-black
    pyls-isort
    pyls-flake8
    mypy-ls
    python-lsp-server[all]
    pytest>=6.2,<7


[flake8]
max-line-length = 80
extend-ignore = C0330, C0326, E203, W503
exclude = migrations
